--- a/frontend/web/uw/sass/footer.scss
+++ b/frontend/web/uw/sass/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	background: url('../../images/footer_img.jpg') center no-repeat;
+	background: url('../../images/footer_img_new.jpg') center no-repeat;
 	background-size: cover;
 	.text_wrap {
 		text-align: center;
