--- a/frontend/web/uw/stylesheets/renovation.css
+++ b/frontend/web/uw/stylesheets/renovation.css
@@ -9,14 +9,14 @@
 /* line 7, ../sass/renovation.scss */
 .renovation h1 {
   text-align: center;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova Regular", sans-serif;
   font-size: 40px;
   font-weight: bold;
-  color: #010211;
   text-transform: uppercase;
   margin-top: 73px;
   margin-bottom: 19px;
   line-height: 39px;
+  letter-spacing: 1px;
 }
 @media screen and (max-width: 1000px) {
   /* line 7, ../sass/renovation.scss */
@@ -28,39 +28,45 @@
   }
 }
 /* line 24, ../sass/renovation.scss */
+.renovation h1 span {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 1.4em;
+}
+/* line 29, ../sass/renovation.scss */
 .renovation .top_text {
   font-size: 18px;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova Light", sans-serif;
   font-weight: 300;
   padding-top: 42px;
   line-height: 30px;
 }
 @media screen and (max-width: 1000px) {
-  /* line 24, ../sass/renovation.scss */
+  /* line 29, ../sass/renovation.scss */
   .renovation .top_text {
     padding-left: 20px;
     padding-right: 20px;
   }
 }
-/* line 35, ../sass/renovation.scss */
+/* line 40, ../sass/renovation.scss */
 .renovation .select_area {
   font-size: 15px;
   padding-top: 51px;
 }
 @media screen and (max-width: 1000px) {
-  /* line 35, ../sass/renovation.scss */
+  /* line 40, ../sass/renovation.scss */
   .renovation .select_area {
     padding-left: 20px;
     padding-right: 20px;
   }
 }
 @media screen and (max-width: 639px) {
-  /* line 35, ../sass/renovation.scss */
+  /* line 40, ../sass/renovation.scss */
   .renovation .select_area {
     text-align: center;
   }
 }
-/* line 45, ../sass/renovation.scss */
+/* line 50, ../sass/renovation.scss */
 .renovation .select_area a {
   font-size: 15px;
   border-radius: 0px;
@@ -69,93 +75,97 @@
   margin-left: 16px;
 }
 @media screen and (max-width: 639px) {
-  /* line 45, ../sass/renovation.scss */
+  /* line 50, ../sass/renovation.scss */
   .renovation .select_area a {
     display: block;
     margin-bottom: 5px;
     margin-left: 0px;
   }
 }
-/* line 56, ../sass/renovation.scss */
+/* line 61, ../sass/renovation.scss */
 .renovation .select_area a.include {
   color: white;
   background: none;
   border: 1px solid #003878;
 }
-/* line 60, ../sass/renovation.scss */
+/* line 65, ../sass/renovation.scss */
 .renovation .select_area a.include.active {
   background: #003878;
 }
-/* line 64, ../sass/renovation.scss */
+/* line 69, ../sass/renovation.scss */
 .renovation .select_area a.start {
-  border: 1px solid #c19f63;
-  background: none;
-  color: #010211;
+  border: 1px solid #C09916;
+  background: #C09916;
+  color: #fff;
 }
-/* line 68, ../sass/renovation.scss */
+/* line 73, ../sass/renovation.scss */
 .renovation .select_area a.start.active {
   background: #c19f63;
 }
-/* line 74, ../sass/renovation.scss */
+/* line 79, ../sass/renovation.scss */
 .renovation #object-map {
   margin-top: 19px;
 }
-/* line 77, ../sass/renovation.scss */
+/* line 82, ../sass/renovation.scss */
 .renovation .areas_table {
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova Light", sans-serif;
 }
-/* line 79, ../sass/renovation.scss */
+/* line 84, ../sass/renovation.scss */
 .renovation .areas_table .title_table {
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova Light", sans-serif;
   font-size: 40px;
   font-weight: 300;
   padding-top: 58px;
   padding-bottom: 23px;
 }
 @media screen and (max-width: 1000px) {
-  /* line 79, ../sass/renovation.scss */
+  /* line 84, ../sass/renovation.scss */
   .renovation .areas_table .title_table {
     padding-left: 20px;
     padding-right: 20px;
     line-height: 40px;
   }
 }
-/* line 91, ../sass/renovation.scss */
+/* line 96, ../sass/renovation.scss */
 .renovation .areas_table .summary {
   display: none;
 }
-/* line 94, ../sass/renovation.scss */
+/* line 99, ../sass/renovation.scss */
 .renovation .areas_table input {
   border-radius: 0px;
 }
-/* line 97, ../sass/renovation.scss */
+/* line 102, ../sass/renovation.scss */
 .renovation .areas_table table {
   border: 1px solid transparent;
 }
-/* line 100, ../sass/renovation.scss */
+/* line 105, ../sass/renovation.scss */
+.renovation .areas_table table thead th:not(:last-child) {
+  border-right: 1px solid #fff;
+}
+/* line 108, ../sass/renovation.scss */
 .renovation .areas_table table thead th {
-  background: #003878;
+  background: #C09916;
   color: white;
   padding: 17px 23px;
 }
 @media screen and (max-width: 639px) {
-  /* line 100, ../sass/renovation.scss */
+  /* line 108, ../sass/renovation.scss */
   .renovation .areas_table table thead th {
     padding: 12px;
   }
 }
-/* line 107, ../sass/renovation.scss */
+/* line 115, ../sass/renovation.scss */
 .renovation .areas_table table thead th:nth-child(2) {
   min-width: 130px;
 }
-/* line 110, ../sass/renovation.scss */
+/* line 118, ../sass/renovation.scss */
 .renovation .areas_table table thead th a {
   color: white;
   font-size: 18px;
   font-weight: 300;
   white-space: nowrap;
 }
-/* line 115, ../sass/renovation.scss */
+/* line 123, ../sass/renovation.scss */
 .renovation .areas_table table thead th a:after {
   background: url("../../images/table_sort.png");
   content: '';
@@ -164,37 +174,42 @@
   height: 8px;
   margin-left: 11px;
 }
-/* line 125, ../sass/renovation.scss */
+/* line 133, ../sass/renovation.scss */
 .renovation .areas_table table thead td {
   background: #eeeff1;
-  padding: 0px;
+  padding: 5px 0;
 }
-/* line 128, ../sass/renovation.scss */
+/* line 136, ../sass/renovation.scss */
 .renovation .areas_table table thead td input {
   height: 60px;
   border: 0px;
   font-size: 18px;
 }
-/* line 133, ../sass/renovation.scss */
+/* line 141, ../sass/renovation.scss */
 .renovation .areas_table table thead td select {
   height: 60px;
   border: 0px;
   font-size: 18px;
   width: 100%;
+  background: #fff;
 }
-/* line 141, ../sass/renovation.scss */
+/* line 150, ../sass/renovation.scss */
 .renovation .areas_table table th {
   border: 1px solid transparent;
 }
-/* line 147, ../sass/renovation.scss */
+/* line 156, ../sass/renovation.scss */
 .renovation .areas_table table tbody tr:nth-child(2n-1) td {
-  background: #b29d7e;
+  background: #DADEE3;
 }
-/* line 151, ../sass/renovation.scss */
+/* line 160, ../sass/renovation.scss */
 .renovation .areas_table table tbody tr td {
   font-size: 18px;
 }
-/* line 157, ../sass/renovation.scss */
+/* line 166, ../sass/renovation.scss */
+.renovation .areas_table table td:not(:last-child) {
+  border-right: 1px solid #EEEFF3;
+}
+/* line 169, ../sass/renovation.scss */
 .renovation .areas_table table td {
   border: 1px solid transparent;
   padding: 17px 23px;
@@ -202,43 +217,55 @@
   background: #eeeff1;
 }
 @media screen and (max-width: 639px) {
-  /* line 157, ../sass/renovation.scss */
+  /* line 169, ../sass/renovation.scss */
   .renovation .areas_table table td {
     padding: 12px;
   }
 }
-/* line 167, ../sass/renovation.scss */
+/* line 179, ../sass/renovation.scss */
 .renovation .areas_table .pagination {
   width: 100%;
   text-align: center;
 }
-/* line 170, ../sass/renovation.scss */
+/* line 182, ../sass/renovation.scss */
+.renovation .areas_table .pagination li.prev a,
+.renovation .areas_table .pagination li.prev span {
+  background: transparent;
+  font-size: 20px;
+}
+/* line 187, ../sass/renovation.scss */
+.renovation .areas_table .pagination li.next a,
+.renovation .areas_table .pagination li.next a {
+  background: transparent;
+  font-size: 20px;
+}
+/* line 192, ../sass/renovation.scss */
 .renovation .areas_table .pagination li {
   margin: 0px 4px;
   display: inline-block;
 }
-/* line 173, ../sass/renovation.scss */
+/* line 195, ../sass/renovation.scss */
 .renovation .areas_table .pagination li a {
   font-size: 15px;
   line-height: 38px;
-  width: 38px;
+  width: 42px;
   display: inline-block;
-  border: 1px solid #a1a4ad;
+  border: 1px solid #A1A6AF;
   color: #010211;
   padding: 0px;
   text-align: center;
 }
-/* line 184, ../sass/renovation.scss */
+/* line 206, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.active a {
   color: white;
-  background: #2e3346;
-  border: 1px solid #2e3346;
+  background: #3B0F50;
+  border: 1px solid #3B0F50;
 }
-/* line 191, ../sass/renovation.scss */
+/* line 213, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.next a, .renovation .areas_table .pagination li.prev a {
   border: 1px solid transparent;
 }
-/* line 194, ../sass/renovation.scss */
+/* line 216, ../sass/renovation.scss */
 .renovation .areas_table .pagination li.next span, .renovation .areas_table .pagination li.prev span {
   border: 1px solid transparent;
   line-height: 38px;
