--- a/frontend/web/uw/stylesheets/uw.css
+++ b/frontend/web/uw/stylesheets/uw.css
@@ -6,55 +6,64 @@
 /* line 4, ../sass/uw.scss */
 body {
   min-width: 480px;
+  font-family: 'Proxima Nova Light', sans-serif;
 }
 
 /* line 8, ../sass/uw.scss */
+.btn-transparent {
+  border-color: #0082A8;
+  box-shadow: none !important;
+  color: #010211;
+}
+
+/* line 13, ../sass/uw.scss */
 .top_block {
   padding-top: 51px;
   text-align: center;
   position: relative;
   min-height: 113px;
 }
-/* line 13, ../sass/uw.scss */
+/* line 18, ../sass/uw.scss */
 .top_block .tass_logo {
   float: left;
   position: absolute;
   top: 0px;
-  left: 0px;
+  left: -15px;
+  width: 110px;
 }
-/* line 21, ../sass/uw.scss */
+/* line 27, ../sass/uw.scss */
 .top_block.white .social a {
   color: white;
 }
-/* line 25, ../sass/uw.scss */
+/* line 31, ../sass/uw.scss */
 .top_block.white .go_front {
-  color: #a1a4ad;
-  border: 1px solid #a1a4ad;
+  color: #3B0F50;
+  border: 1px solid #3B0F50;
 }
-/* line 30, ../sass/uw.scss */
+/* line 36, ../sass/uw.scss */
 .top_block .social {
   float: right;
   position: absolute;
   right: 2px;
   top: 36px;
 }
-/* line 35, ../sass/uw.scss */
+/* line 41, ../sass/uw.scss */
 .top_block .social a {
   margin-left: 38px;
   color: #003878;
   font-size: 17px;
   transition: all 0.3s linear;
 }
-/* line 40, ../sass/uw.scss */
+/* line 46, ../sass/uw.scss */
 .top_block .social a:nth-child(1) {
   margin-left: 0px;
 }
-/* line 43, ../sass/uw.scss */
+/* line 49, ../sass/uw.scss */
 .top_block .social a:hover {
   color: #E1C6A9;
 }
 @media screen and (max-width: 999px) {
-  /* line 30, ../sass/uw.scss */
+  /* line 36, ../sass/uw.scss */
   .top_block .social {
     float: right;
     position: absolute;
@@ -63,13 +72,13 @@ body {
     text-align: right;
     width: 119px;
   }
-  /* line 54, ../sass/uw.scss */
+  /* line 60, ../sass/uw.scss */
   .top_block .social a {
     display: inline-block;
     margin-bottom: 27px;
   }
 }
-/* line 60, ../sass/uw.scss */
+/* line 66, ../sass/uw.scss */
 .top_block .go_front {
   border: 1px solid #a1a4ad;
   color: #010211;
@@ -80,7 +89,7 @@ body {
   padding: 0px 42px;
   position: relative;
 }
-/* line 69, ../sass/uw.scss */
+/* line 75, ../sass/uw.scss */
 .top_block .go_front i {
   margin-right: 10px;
   position: relative;
@@ -88,7 +97,7 @@ body {
   font-size: 22px;
 }
 
-/* line 77, ../sass/uw.scss */
+/* line 83, ../sass/uw.scss */
 .container_inner {
   width: 934px;
   margin: 0 auto;
@@ -96,45 +105,47 @@ body {
   z-index: 1;
 }
 @media screen and (max-width: 933px) {
-  /* line 77, ../sass/uw.scss */
+  /* line 83, ../sass/uw.scss */
   .container_inner {
     width: 100%;
   }
 }
 
-/* line 87, ../sass/uw.scss */
+/* line 93, ../sass/uw.scss */
 .wrap {
-  background: #eeeff1;
+  width: 100%;
+  background: #EEEFF3;
+  overflow: hidden;
 }
 
-/* line 92, ../sass/uw.scss */
+/* line 100, ../sass/uw.scss */
 .grid_wrap {
   margin-top: 62px;
   background: white;
   padding-top: 13px;
 }
 
-/* line 98, ../sass/uw.scss */
+/* line 106, ../sass/uw.scss */
 #cboxContent {
   background: none;
 }
 
-/* line 101, ../sass/uw.scss */
+/* line 109, ../sass/uw.scss */
 #cboxLoadedContent {
   background: none;
 }
 
-/* line 104, ../sass/uw.scss */
+/* line 112, ../sass/uw.scss */
 #cboxTitle {
   display: none;
 }
 
-/* line 108, ../sass/uw.scss */
+/* line 116, ../sass/uw.scss */
 .gallery_popup img {
   max-width: 100%;
   height: auto;
 }
-/* line 112, ../sass/uw.scss */
+/* line 120, ../sass/uw.scss */
 .gallery_popup .popup_text {
   font-size: 30px;
   color: #ffffff;
@@ -142,13 +153,13 @@ body {
   font-weight: 300;
   padding-top: 46px;
 }
-/* line 119, ../sass/uw.scss */
+/* line 127, ../sass/uw.scss */
 .gallery_popup .close {
   float: none;
   padding-top: 20px;
   opacity: 1;
 }
-/* line 123, ../sass/uw.scss */
+/* line 131, ../sass/uw.scss */
 .gallery_popup .close img {
   width: 150px;
   height: 150px;
@@ -156,51 +167,66 @@ body {
   display: block;
 }
 
-/* line 131, ../sass/uw.scss */
+/* line 139, ../sass/uw.scss */
 #cboxOverlay {
   background: #2e3346;
   opacity: 0.9;
 }
 
-/* line 135, ../sass/uw.scss */
+/* line 143, ../sass/uw.scss */
 .popups_info {
   display: none;
 }
 
-/* line 141, ../sass/uw.scss */
+/* line 149, ../sass/uw.scss */
 .bottom_gallery .title_bottom_gallery {
   font-size: 15px;
   color: #000108;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
   font-weight: 300;
   text-align: center;
   padding: 0px 10px;
   padding-bottom: 29px;
 }
-/* line 150, ../sass/uw.scss */
+/* line 158, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img {
   position: relative;
 }
-/* line 152, ../sass/uw.scss */
+/* line 160, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video {
   display: block;
 }
-/* line 154, ../sass/uw.scss */
+/* line 162, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video img {
   display: block;
   width: 100%;
   height: auto;
 }
-/* line 159, ../sass/uw.scss */
+/* line 167, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img .bottom_gallery_video:before {
   content: '';
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 56, 120, 0.4) url("../../images/video.svg") center no-repeat;
+  background: url("../../images/video.svg") center no-repeat;
   background-size: 134px;
+  z-index: 1;
 }
-/* line 168, ../sass/uw.scss */
+/* line 178, ../sass/uw.scss */
+.bottom_gallery .bottom_gallery_img .bottom_gallery_video::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(54, 23, 80, 0.8);
+  background-size: 134px;
+  z-index: 0;
+}
+/* line 190, ../sass/uw.scss */
 .bottom_gallery .bottom_gallery_img iframe {
   position: absolute;
   top: 0px;
@@ -210,39 +236,34 @@ body {
   display: none;
 }
 
-/* line 179, ../sass/uw.scss */
+/* line 201, ../sass/uw.scss */
 .blue_top_bg {
   position: relative;
 }
-/* line 181, ../sass/uw.scss */
-.blue_top_bg:before {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: block;
-  content: '';
-  background: url("../../images/blue_top_bg.png") center top no-repeat;
-  background-size: 100% auto;
-}
 
-/* line 192, ../sass/uw.scss */
+/* line 214, ../sass/uw.scss */
 #object-map {
   position: relative;
   z-index: 1;
 }
 
-/* line 197, ../sass/uw.scss */
+/* line 219, ../sass/uw.scss */
 .white_text {
   color: white !important;
 }
 
-/* line 201, ../sass/uw.scss */
+/* line 222, ../sass/uw.scss */
+.purple_text {
+  color: #3B0F50 !important;
+}
+
+/* line 226, ../sass/uw.scss */
 .bottom_select_gallery {
   padding-top: 122px;
   display: flex;
   flex-wrap: wrap;
 }
-/* line 205, ../sass/uw.scss */
+/* line 230, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery {
   width: 25%;
   position: relative;
@@ -250,12 +271,12 @@ body {
   overflow: hidden;
 }
 @media screen and (max-width: 999px) {
-  /* line 205, ../sass/uw.scss */
+  /* line 230, ../sass/uw.scss */
   .bottom_select_gallery .select_gallery {
     width: 50%;
   }
 }
-/* line 213, ../sass/uw.scss */
+/* line 238, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:before {
   content: '';
   display: none;
@@ -266,17 +287,17 @@ body {
   height: 100%;
   z-index: 2;
 }
-/* line 224, ../sass/uw.scss */
+/* line 249, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:hover:before {
   display: block;
 }
-/* line 227, ../sass/uw.scss */
+/* line 252, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery:hover img {
   -webkit-transform: scale(1.4);
   -ms-transform: scale(1.4);
   transform: scale(1.4);
 }
-/* line 233, ../sass/uw.scss */
+/* line 258, ../sass/uw.scss */
 .bottom_select_gallery .select_gallery img {
   display: block;
   width: 100%;
