--- a/frontend/web/uw/stylesheets/gallery.css
+++ b/frontend/web/uw/stylesheets/gallery.css
@@ -1,18 +1,19 @@
 /* line 1, ../sass/gallery.scss */
 .gallery {
   color: #010211;
-  font-family: "Proxima Nova";
+  font-family: "Proxima Nova", sans-serif;
 }
 /* line 4, ../sass/gallery.scss */
 .gallery h1 {
-  font-family: "Proxima Nova";
-  font-size: 40px;
+  max-width: 750px;
+  font-family: "Proxima Nova", sans-serif;
+  font-size: 55px;
   font-weight: bold;
-  color: #010211;
+  color: #3B0F50;
   text-transform: uppercase;
   margin-top: 5px;
-  margin-bottom: 19px;
-  line-height: 50px;
+  margin-bottom: 0;
+  line-height: 60px;
 }
 @media screen and (max-width: 1000px) {
   /* line 4, ../sass/gallery.scss */
@@ -23,7 +24,7 @@
     line-height: 40px;
   }
 }
-/* line 20, ../sass/gallery.scss */
+/* line 21, ../sass/gallery.scss */
 .gallery .small_title {
   color: #a1a4ad;
   font-size: 18px;
@@ -32,70 +33,71 @@
   padding-top: 94px;
 }
 @media screen and (max-width: 1000px) {
-  /* line 20, ../sass/gallery.scss */
+  /* line 21, ../sass/gallery.scss */
   .gallery .small_title {
     padding-left: 20px;
     padding-right: 20px;
   }
 }
-/* line 31, ../sass/gallery.scss */
+/* line 32, ../sass/gallery.scss */
 .gallery .grid_item {
   width: 50%;
   padding: 10px;
 }
 @media screen and (max-width: 999px) {
-  /* line 31, ../sass/gallery.scss */
+  /* line 32, ../sass/gallery.scss */
   .gallery .grid_item {
     width: 100%;
   }
 }
-/* line 39, ../sass/gallery.scss */
+/* line 40, ../sass/gallery.scss */
 .gallery .grid_item img {
   width: 100%;
   height: auto;
 }
-/* line 44, ../sass/gallery.scss */
+/* line 45, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap {
-  background: #c01a24;
-  padding: 58px 96px;
+  background: #C59D17;
+  color: #fff;
+  padding: 20px 90px 60px;
   box-sizing: border-box;
   height: 473px;
 }
 @media screen and (max-width: 1000px) {
-  /* line 44, ../sass/gallery.scss */
+  /* line 45, ../sass/gallery.scss */
   .gallery .slider_gallery_wrap {
     height: auto;
   }
 }
 @media screen and (max-width: 1200px) {
-  /* line 44, ../sass/gallery.scss */
+  /* line 45, ../sass/gallery.scss */
   .gallery .slider_gallery_wrap {
     padding: 50px;
   }
 }
-/* line 55, ../sass/gallery.scss */
+/* line 57, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap .slider_gallery {
-  padding-top: 36px;
+  padding-top: 60px;
 }
-/* line 58, ../sass/gallery.scss */
+/* line 60, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap .small {
-  color: #5b0c11;
-  font-size: 18px;
+  color: #fff;
+  font: 18px 'Proxima Nova Light', sans-serif;
   font-weight: 300;
 }
-/* line 63, ../sass/gallery.scss */
+/* line 65, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap .slider_gallery_item {
   height: 240px;
 }
 @media screen and (max-width: 1000px) {
-  /* line 63, ../sass/gallery.scss */
+  /* line 65, ../sass/gallery.scss */
   .gallery .slider_gallery_wrap .slider_gallery_item {
     height: auto;
   }
 }
-/* line 68, ../sass/gallery.scss */
+/* line 70, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap .slider_gallery_item a {
-  font-size: 40px;
+  font: 40px 'Proxima Nova Light', sans-serif;
   color: white;
   font-weight: 300;
   line-height: 50px;
@@ -103,85 +105,90 @@
   word-spacing: -3px;
 }
 @media screen and (max-width: 767px) {
-  /* line 68, ../sass/gallery.scss */
+  /* line 70, ../sass/gallery.scss */
   .gallery .slider_gallery_wrap .slider_gallery_item a {
     font-size: 30px;
     line-height: 40px;
   }
 }
-/* line 81, ../sass/gallery.scss */
+/* line 83, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap .owl-dots {
   padding-top: 17px;
 }
-/* line 83, ../sass/gallery.scss */
+/* line 85, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap .owl-dots span {
   display: inline-block;
   width: 10px;
   height: 10px;
-  background: #5b0c11;
+  background: #F3B900;
   border-radius: 50%;
   float: left;
   margin-right: 40px;
 }
-/* line 93, ../sass/gallery.scss */
+/* line 95, ../sass/gallery.scss */
 .gallery .slider_gallery_wrap .owl-dots .active span {
   background: white;
 }
-/* line 99, ../sass/gallery.scss */
+/* line 101, ../sass/gallery.scss */
 .gallery .gallery_name {
-  background: #2e3346;
+  background: #0090C0;
   padding: 75px 56px;
   padding-bottom: 89px;
 }
 @media screen and (max-width: 1200px) {
-  /* line 99, ../sass/gallery.scss */
+  /* line 101, ../sass/gallery.scss */
   .gallery .gallery_name {
     padding: 50px;
   }
 }
-/* line 106, ../sass/gallery.scss */
+/* line 108, ../sass/gallery.scss */
 .gallery .gallery_name .small {
-  font-size: 18px;
-  color: #a1a4ad;
+  display: block;
+  margin-bottom: 10px;
+  font: 18px 'Proxima Nova Light', sans-serif;
+  color: #86bdd0;
   font-weight: 300;
 }
-/* line 111, ../sass/gallery.scss */
+/* line 115, ../sass/gallery.scss */
 .gallery .gallery_name .text {
-  font-size: 40px;
+  font: 40px 'Proxima Nova Light', sans-serif;
   color: white;
   font-weight: 300;
   line-height: 40px;
   padding-top: 11px;
 }
 @media screen and (max-width: 1200px) {
-  /* line 111, ../sass/gallery.scss */
+  /* line 115, ../sass/gallery.scss */
   .gallery .gallery_name .text {
     font-size: 35px;
   }
 }
 @media screen and (max-width: 767px) {
-  /* line 111, ../sass/gallery.scss */
+  /* line 115, ../sass/gallery.scss */
   .gallery .gallery_name .text {
     font-size: 30px;
     line-height: 40px;
   }
 }
-/* line 126, ../sass/gallery.scss */
+/* line 130, ../sass/gallery.scss */
 .gallery .gallery_inline {
   position: relative;
   display: block;
 }
-/* line 129, ../sass/gallery.scss */
+/* line 133, ../sass/gallery.scss */
 .gallery .gallery_inline:before {
   content: '';
-  display: none;
-  background: rgba(0, 56, 120, 0.4) url("../../images/open.svg") center no-repeat;
+  display: block;
+  background: rgba(54, 23, 80, 0.7) url("../../images/open.svg") center no-repeat;
   background-size: 134px;
+  border: 20px solid #3B0F50;
   position: absolute;
   width: 100%;
   height: 100%;
+  opacity: 0;
+  transition: opacity .2s;
 }
-/* line 139, ../sass/gallery.scss */
+/* line 146, ../sass/gallery.scss */
 .gallery .gallery_inline:hover:before {
-  display: block;
+  opacity: 1;
 }
